--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" Method="POST">
+	<div>
+	<label for="name8">Name8:</label><br>
+	<input type="text" name="name8" id="name8">
+	</div>
+	<label for="email">Email*:</label><br>
+	<input type="email" name="email" id="email" required>
+	<div>
+	<label for="gender">Gender*:</label><br>
+	<input type="radio" name="gender" id="gender" required>male<br>
+	<input type="radio" name="gender" id="gender" required>female
+	</div>
+	<div>
+		<label for="Car Brands">Car Brands:</label>
+		<select name="Car Brands">
+			<option value="BMW">BMW</option>
+			<option value="Audi">Audi</option>
+			<option value="Mercedez">Mercedez</option>
+	</div>
+	<div>
+		<label for="Car Age">Car Age*:</label><br>
+		<input type="number" name="Car Age" id="Car Age" required>
+	</div>
+	<div>
+		<label for="Date of Purchase">Date of Purchase*:</label><br>
+		<input type="date" name="Date of Purchase" id="Date of Purchase" required>
+	</div>
+	<div>
+		<label for="Password">Password*:</label><br>
+		<input type="Password" name="password" id="password" required>
+	</div>
+	<button type="submit">submit button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
