--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<form action="" Method="POST">
 	<div>
-	<label for="name8">Name8:</label><br>
-	<input type="text" name="name8" id="name8">
+	<label for="name8">Name*:</label><br>
+	<input type="text" name="name8" id="name8" required>
 	</div>
 	<label for="email">Email*:</label><br>
 	<input type="email" name="email" id="email" required>
@@ -32,12 +32,12 @@
 		<input type="number" name="Car Age" id="Car Age" required>
 	</div>
 	<div>
-		<label for="Date of Purchase">Date of Purchase*:</label><br>
+		<label for="Date of Purchase">Date of Purchase(dop)*:</label><br>
 		<input type="date" name="Date of Purchase" id="Date of Purchase" required>
 	</div>
 	<div>
 		<label for="Password">Password*:</label><br>
-		<input type="Password" name="password" id="password" required>
+		<input type="Password" name="Password" id="Password" required>
 	</div>
 	<button type="submit">submit button</button>
 	</form>
