--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 	</div>
 	<div>
 		<label for="Car Brands">Car Brands:</label>
-		<select name="Car Brands">
+		<select name="Car Brands" id="Car Brands">
 			<option value="BMW">BMW</option>
 			<option value="Audi">Audi</option>
 			<option value="Mercedez">Mercedez</option>
