--- a/main.html
+++ b/main.html
@@ -21,19 +21,19 @@
 	<input type="radio" name="gender" id="gender" required>female
 	</div>
 	<div>
-		<label for="Car Brands">Car Brands:</label>
-		<select name="Car Brands" id="Car Brands">
+		<label for="cars">Car Brands:</label>
+		<select name="cars" id="cars">
 			<option value="BMW">BMW</option>
 			<option value="Audi">Audi</option>
 			<option value="Mercedez">Mercedez</option>
 	</div>
 	<div>
-		<label for="Car Age">Car Age*:</label><br>
-		<input type="number" name="Car Age" id="Car Age" required>
+		<label for="CarAge">Car Age*:</label><br>
+		<input type="number" name="CarAge" id="CarAge" required>
 	</div>
 	<div>
-		<label for="Date of Purchase">Date of Purchase(dop)*:</label><br>
-		<input type="date" name="Date of Purchase" id="Date of Purchase" required>
+		<label for="DateofPurchase">Date of Purchase(dop)*:</label><br>
+		<input type="date" name="DateofPurchase" id="DateofPurchase" required>
 	</div>
 	<div>
 		<label for="Password">Password*:</label><br>
