--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<form action="" Method="POST">
 	<div>
-	<label for="name8">Name*:</label><br>
-	<input type="text" name="name8" id="name8" required>
+	<label for="name">Name*:</label><br>
+	<input type="text" name="name" id="name" required>
 	</div>
 	<label for="email">Email*:</label><br>
 	<input type="email" name="email" id="email" required>
