--- a/main.html
+++ b/main.html
@@ -28,16 +28,16 @@
 			<option value="Mercedez">Mercedez</option>
 	</div>
 	<div>
-		<label for="CarAge">Car Age*:</label><br>
-		<input type="number" name="CarAge" id="CarAge" required>
+		<label for="carage">Car Age*:</label><br>
+		<input type="number" name="carage" id="carage" required>
 	</div>
 	<div>
-		<label for="DateofPurchase">Date of Purchase(dop)*:</label><br>
-		<input type="date" name="DateofPurchase" id="DateofPurchase" required>
+		<label for="dop">Date of Purchase(dop)*:</label><br>
+		<input type="date" name="dop" id="dop" required>
 	</div>
 	<div>
-		<label for="Password">Password*:</label><br>
-		<input type="Password" name="Password" id="Password" required>
+		<label for="password">Password*:</label><br>
+		<input type="password" name="password" id="password" required>
 	</div>
 	<button type="submit">submit button</button>
 	</form>
