--- a/main.html
+++ b/main.html
@@ -26,7 +26,9 @@
 			<option value="BMW">BMW</option>
 			<option value="Audi">Audi</option>
 			<option value="Mercedez">Mercedez</option>
+		</select>
 	</div>
+		
 	<div>
 		<label for="carage">Car Age*:</label><br>
 		<input type="number" name="carage" id="carage" required>
